Wire Plex Media Server into this sample HTPC configuration

--- a/files/static_html/index.html
+++ b/files/static_html/index.html
@@ -16,7 +16,7 @@
   <li><a href="/sickrage">TV Shows</a></li>
   <li><a href="/couchpotato">Movies</a></li>
   <li><a href="/sabnzbd">Newsgroup Downloader</a></li>
-  <li><a href="/plex">Local Plex Server</a></li>
+  <li><a href="/web">Local Plex Server</a></li>
   <li><a href="/oauth2/sign_in">Logout</a></li>
 </ul>
 
