--- a/files/static_html/index.html
+++ b/files/static_html/index.html
@@ -15,6 +15,7 @@
 <ul>
   <li><a href="/sickrage">TV Shows</a></li>
   <li><a href="/couchpotato">Movies</a></li>
+  <li><a href="/headphones/home">Audio</a></li>
   <li><a href="/sabnzbd">Newsgroup Downloader</a></li>
   <li><a href="/web">Local Plex Server</a></li>
   <li><a href="/oauth2/sign_in">Logout</a></li>
